--- a/css/style.css
+++ b/css/style.css
@@ -627,7 +627,7 @@ header .ham-burger.active span:nth-child(2){
 
 .price-package{
 	padding: 80px 0px;
-	background-color: #ffffff;
+	background-color: #d8ff57;
 }
 .price-package h2{
 	font-size: 30px;
