--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ header{
 	top:0px;
 	width: 100%;
 	z-index: 10;
-	background-color: #d8ff57;
+	background-color: #000000;
 	padding:15px 15px;
 }
 header .container{
