--- a/css/style.css
+++ b/css/style.css
@@ -690,7 +690,7 @@ header .ham-burger.active span:nth-child(2){
 .price-package .content .box .inner .text .btn{
     padding: 8px 30px;
     background-color: #c11325;
-    color: #ffffff;
+    color: #d8ff57;
     text-decoration: none;
     display: inline-block;
     border: 1px solid transparent;
