--- a/css/style.css
+++ b/css/style.css
@@ -247,7 +247,7 @@ header .ham-burger.active span:nth-child(2){
 /*Service Section*/
 .service{
 	padding:80px 0px;
-	background-color: #c11325;
+	background-color: #d8ff57;
 }
 
 .service .content{
